--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.12",
     "@radix-ui/react-slot": "^1.1.2",
+    "@stream-io/node-sdk": "^0.4.19",
+    "@stream-io/video-react-sdk": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.22.0",
@@ -18,6 +20,7 @@
     "next": "^14.2.25",
     "react": "^18",
     "react-dom": "^18",
+    "svix": "^1.63.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
